// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading> renders h1 Heading if does not pass a size 1`] = `
<h1
  className="Van-Heading Van-Heading--h1"
  size="h1"
>
  My Heading
</h1>
`;

exports[`<Heading> renders h1 Heading size 1`] = `
<h1
  className="Van-Heading Van-Heading--h1"
  size="h1"
>
  My Heading
</h1>
`;

exports[`<Heading> renders h2 Heading size 1`] = `
<h2
  className="Van-Heading Van-Heading--h2"
  size="h2"
>
  My Heading
</h2>
`;

exports[`<Heading> renders h3 Heading size 1`] = `
<h3
  className="Van-Heading Van-Heading--h3"
  size="h3"
>
  My Heading
</h3>
`;

exports[`<Heading> renders h4 Heading size 1`] = `
<h4
  className="Van-Heading Van-Heading--h4"
  size="h4"
>
  My Heading
</h4>
`;

exports[`<Heading> renders with specific className 1`] = `
<h1
  className="Van-Heading my-class Van-Heading--h1"
  size="h1"
>
  My Heading
</h1>
`;
